# patron MVC completo: separación de la lógica en diferentes archivos y carpetas

--- a/index.html
+++ b/index.html
@@ -259,29 +259,6 @@
         <h3 id='infoError' class='centrado naranja'></h3>
       </div>
     </script>
-    <!-- Plantilla con el formulario de registro [SIN VALIDACIÓN HTML5]
-    <script type="text/template" id='formularioDeRegistro'>
-      <div id='contenedorFormRegistro' class='cuadro_texto margenSuperior'>
-        <form id='formRegistro' name='formRegistro' action='#registro' method='POST'>
-          <div class='centrado'>
-            <label class='etiqueta' for='usuario'>usuario</label>
-            <br><br>
-            <input class='cuadro-texto' type='text' id='usuario' name='usuario' size='20'>
-            <br><br>
-            <label class='etiqueta' for='email'>email</label>
-            <br><br>
-            <input class='cuadro-texto' type='text' id='email' name='email' size='20' >
-            <br><br>
-            <label class='etiqueta' for='password'>password</label>
-            <br><br>
-            <input class='cuadro-texto' type='password' id='password' name='password' size='20' >
-            <br><br>
-            <input type="submit" class="button" id="registrar" name="registrar" value="registrar">
-          </div>
-        </form>
-        <h3 id='infoError' class='centrado naranja'></h3>
-      </div>
-    </script> -->
     <!-- Plantilla con la pagina de error de acceso -->
     <script type='text/template' id='errorAcceso'>
         <div class='cuadro_texto margenSuperior'>
@@ -607,6 +584,49 @@
     </script>
 
     <!-- scripts con la lógica de la página -->
+    <script type="text/javascript" src="js/Modelos/CarroCompra.js"></script>
+    <script type="text/javascript" src="js/Modelos/Categoria.js"></script>
+    <script type="text/javascript" src="js/Modelos/Perfil.js"></script>
+    <script type="text/javascript" src="js/Modelos/Producto.js"></script>
+    <script type="text/javascript" src="js/Modelos/Sesion.js"></script>
+    <script type="text/javascript" src="js/Modelos/Usuario.js"></script>
+
+    <script type="text/javascript" src="js/Colecciones/Categorias.js"></script>
+    <script type="text/javascript" src="js/Colecciones/Perfiles.js"></script>
+    <script type="text/javascript" src="js/Colecciones/Productos.js"></script>
+    <script type="text/javascript" src="js/Colecciones/Usuarios.js"></script>
+
+    <script type="text/javascript" src="js/Vistas/vistaAtencionCliente.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaAyuda.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaCategoria.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaCategoria.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaDetalleProducto.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaDivsContainer.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaErrorAcceso.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaFormAcceso.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaFormRegistro.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaInfoLegal.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaInfoPerfil.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaInfoRegistro.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaListaProductos.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaMenuCategorias.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaPanelAdministracion.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaPerfilUsuario.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaProducto.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaProductoParaComprar.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaQuienesSomos.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminAltaProducto.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminAltaUsuario.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminDetalleProducto.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminDetalleUsuario.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelModificacionProducto.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelModificacionUsuario.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminProductos.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminUsuarios.js"></script>
+
+    <script type="text/javascript" src="js/vendor/frameworkCookies.js"></script>
+    <script type="text/javascript" src="js/funcionesRooter.js"></script>
+    <script type="text/javascript" src="js/Rooter.js"></script>
     <script type="text/javascript" src="js/App.js"></script>
 
   </body>
