# se arreglan pequeños ajustes: panel categorias en admin y productos con descuento para usuarios de google

--- a/index.html
+++ b/index.html
@@ -626,6 +626,7 @@
     <script type="text/javascript" src="js/Vistas/vistaQuienesSomos.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminAltaProducto.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminAltaUsuario.js"></script>
+    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminCategorias.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminDetalleProducto.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminDetalleUsuario.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminModificacionProducto.js"></script>
