# añadido botón +1 de google+ a detalle de producto

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <h3 class="subtitulo_detalle">Editorial: <%= editorial %></h3>
         <h3 class="subtitulo_detalle" id='precio'>Precio: <%= precio %> € </h3>
         <button class="button margen_izq" id='comprar'>comprar</button>
+        <div class="g-plusone" data-size="medium"></div>
         <br/>
         <h3 class="resenya">Reseña:</h3>
         <p class="paragraph">
@@ -634,7 +635,10 @@
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminProductos.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminUsuarios.js"></script>
 
+    <!-- Google+ and login and +1 button -->
     <script type="text/javascript" src="js/google.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
     <script type="text/javascript" src="js/vendor/frameworkCookies.js"></script>
     <script type="text/javascript" src="js/funcionesRooter.js"></script>
     <script type="text/javascript" src="js/Rooter.js"></script>
