# revision de la app, mejorado el cierre de sesión y la busqueda de productos

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <script type="text/javascript" src="js/vendor/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="js/vendor/underscore-min.js"></script>
     <script type="text/javascript" src="js/vendor/backbone-min.js"></script>
+    <!-- Google+ and glogin and g+1 button -->
+    <script type="text/javascript" src="js/google.js"></script>
+    <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+    <!-- Facebook api -->
+    <script type="text/javascript" src="js/facebook.js"></script>
 
   </head>
   <body>
@@ -661,14 +666,10 @@
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminProductos.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminUsuarios.js"></script>
 
-    <!-- Google+ and glogin and g+1 button -->
-    <script type="text/javascript" src="js/google.js"></script>
-    <script src="https://apis.google.com/js/client:platform.js" async defer></script>
-    <!-- Facebook api -->
-    <script type="text/javascript" src="js/facebook.js"></script>
+
 
     <script type="text/javascript" src="js/vendor/frameworkCookies.js"></script>
-    <script type="text/javascript" src="js/funcionesRooter.js"></script>
+    <script type="text/javascript" src="js/funcionesRouter.js"></script>
     <script type="text/javascript" src="js/Router.js"></script>
     <script type="text/javascript" src="js/App.js"></script>
 
