# corregidos errores varios y perfil de usuario

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </button>
       </div>
       <div id='contenedorFormRegistro' class='cuadro_perfil margenSuperior'>
-        <form id='formPerfilUsuario' name='formPerfilUsuario' action='#regPerfilUsuario' method='POST'>
+        <form id='formPerfilUsuario' name='formPerfilUsuario'>
           <div class='centrado'>
             <label class='etiqueta' for='nombre'>nombre</label>
             <br><br>
