# correccion de error en acceso

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <!-- Plantilla con el formulario de acceso -->
     <script type="text/template" id='formularioDeAcceso'>
       <div>
-        <form id='login' name='log-in' action='#acceso' method='POST'>
+        <form id='login' name='log-in'>
           <div class='centrado'>
             <label class='etiqueta' for='usuario'>usuario</label>
             <br><br>
@@ -557,14 +557,10 @@
     <script type="text/javascript" src="js/Vistas/vistaProductoParaComprar.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaQuienesSomos.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminAltaProducto.js"></script>
-    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminAltaUsuario.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminCategorias.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminDetalleProducto.js"></script>
-    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminDetalleUsuario.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminModificacionProducto.js"></script>
-    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminModificacionUsuario.js"></script>
     <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminProductos.js"></script>
-    <script type="text/javascript" src="js/Vistas/vistaSubpanelAdminUsuarios.js"></script>
 
     <script type="text/javascript" src="js/facebook.js"></script>
     <script type="text/javascript" src="js/google.js"></script>
